--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="darkreader-lock" content="dark"/>
+		<meta name="color-scheme" content="dark light" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
